--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "allrun",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Execute multiple commands as parallel sub-processes. Optionally, first one finished terminates the rest.",
   "bin": {
     "allcmd": "bin/all-cmd.js",
@@ -11,7 +11,15 @@
     "type": "git",
     "url": "https://github.com/mablay/allrun.git"
   },
-  "keywords": ["run", "execute", "race", "parallel", "concurrent", "command", "cli"],
+  "keywords": [
+    "run",
+    "execute",
+    "race",
+    "parallel",
+    "concurrent",
+    "command",
+    "cli"
+  ],
   "author": "Marc Ablay",
   "license": "ISC"
 }
